--- a/src/app/styles/common.css
+++ b/src/app/styles/common.css
@@ -3,7 +3,7 @@
 body {
     font-family: "Roboto", sans-serif;
     color: black;
-    background-color: white;
+    background-color: rgba(128, 128, 128, 0.082);
     font-family: "Roboto", sans-serif;
     font-size: 14px;
     line-height: 1.6em;
