--- a/src/app/components/SliddingOptionMenu/style.css
+++ b/src/app/components/SliddingOptionMenu/style.css
@@ -2,17 +2,18 @@
     display: inline-block;
     width: 300px;
     border: 1px solid #eee;
-    box-shadow: 1px 1px 3px 0 #f2f2f2;
+    box-shadow: 1px 1px 5px 0 #f2f2f2;
     margin: 10px;
     text-align: center;
     position: relative;
+    background-color: white;
 }
 
 .option-menu h1 {
     padding: 10px;
     margin: 10px;
-    font-size: 1.4rem;
-    font-weight: 600;
+    font-size: 1.3rem;
+    font-weight: 500;
     color: gray;
 }
 
@@ -22,6 +23,33 @@
     background-size: contain;
     background-position: center center;
     background-repeat: no-repeat;
+}
+
+@media only screen and (max-device-width: 768px) {
+    .option-menu {
+        display: inline-block;
+        width: 200px;
+        margin: 10px;
+    }
+
+    .option-menu .logo {
+        height: 60px;
+        margin: 5px auto;
+    }
+}
+
+@media only screen and (max-device-width: 448px) {
+    .option-menu {
+        display: inline-block;
+        width: 250px;
+        margin: 5px;
+        padding-top: 8px;
+    }
+
+    .option-menu .logo {
+        height: 50px;
+        margin: 3px auto;
+    }
 }
 
 .options-overlay {
@@ -38,7 +66,7 @@
     transition: all 0.5s ease-out;
 }
 
-.option-menu:hover .options-overlay {
+.option-menu.hover .options-overlay {
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
     height: 100%;
@@ -49,7 +77,7 @@
     text-decoration: none;
 }
 
-.option-menu:hover .options-overlay a {
+.option-menu.hover .options-overlay a {
     color: white;
 }
 
