--- a/src/app/components/App/app.css
+++ b/src/app/components/App/app.css
@@ -1,5 +1,5 @@
 .app {
-    background-color: white;
+    background-color: #f4f5f8;
     font-family: "Roboto", sans-serif;
     min-width: 400px;
     color: black;
