--- a/src/app/components/SliddingOptionMenu/style.css
+++ b/src/app/components/SliddingOptionMenu/style.css
@@ -2,11 +2,11 @@
     display: inline-block;
     width: 300px;
     border: 1px solid #eee;
-    box-shadow: 1px 1px 5px 0 #f2f2f2;
     margin: 10px;
     text-align: center;
     position: relative;
     background-color: white;
+    box-shadow: 1px 6px 18px 0 rgba(68, 70, 80, 0.12);
 }
 
 .option-menu h1 {
